--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -21,7 +21,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v1
       - name: use this action, test solution dir
-        uses: zyborg/dotnet-tests-report@v1
+        uses: ./
         with:
           project_path: AdvisorApi/AdiserUnitTests
           report_name: my_project_tests
