--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -20,9 +20,27 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v1
-      - name: use this action, test solution dir
+      - name: use this action, xunit project dir, ALTERNATE XSL
+        if: ${{ !cancelled() }}
+        id: testAction3a2
+        uses: ./
         with:
-          project_path: AdvisorApi/AdiserUnitTests
-          report_name: my_project_tests
-          report_title: My Project Tests
+          project_path: tests/samples.xunit/AssertExamples
+          report_name: tests_1_xunit_altxsl
+          report_title: Sample XUnit Tests (Alt XSL)
           github_token: ${{secrets.NUGET_CUSTOMFEEDPASSWORD}}
+          gist_name: dotnet-tests-report_xunit_altxsl.md
+          gist_badge_label: 'XUnit Tests (Alt XSL): %Counters_passed%/%Counters_total%'
+          gist_token: ${{ secrets.GIST_TOKEN }}
+          trx_xsl_path: trx-report/trx2md-alt-sample.xsl
+
+          
+      - name: dump test results
+        shell: pwsh
+        run: |
+          Write-ActionInfo 'Testing on: ${{ matrix.os }}'
+          Write-ActionInfo '  xUnit (XSL Alt):'
+          Write-ActionInfo '    * result_value = ${{ steps.testAction3a2.outputs.result_value }}'
+          Write-ActionInfo '    * total_count  = ${{ steps.testAction3a2.outputs.total_count }}'
+          Write-ActionInfo '    * passed_count = ${{ steps.testAction3a2.outputs.passed_count }}'
+          Write-ActionInfo '    * failed_count = ${{ steps.testAction3a2.outputs.failed_count }}'
